samples/_failures_safe/1761656159_0bd70c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8ffdfaf.c: In function ‘main’:
./samples/SAFE/__tmp_c8ffdfaf.c:137:61: error: missing terminating " character
  137 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "System started
      |                                                             ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c8ffdfaf.c:137:5: error: expected expression at end of input
  137 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "System started
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_c8ffdfaf.c:137:5: error: expected declaration or statement at end of input
